b4.4.4 - Visual fixes
- Fixed Tools command bar button being one pixel too big;
- Fixed Page, Safety and Tools command bar buttons being too big in icons only mode;
- Fixed BeautyFox Wizard having Next buttons where it shouldn't;
- Fixed Credits.

--- a/Profile Folder/chrome/partials/chrome/_toolbars.scss
+++ b/Profile Folder/chrome/partials/chrome/_toolbars.scss
@@ -975,7 +975,15 @@ findbar {
     padding-left: 8px !important;
 }
 #cBToolsMenuButton {
-    padding-left: 10px !important;
+    padding-left: 9px !important;
+}
+
+@supports -moz-bool-pref("BeautyFox.option.onlyIconsinCB") {
+    #cBPageMenuButton,
+    #cBToolsMenuButton,
+    #cBSafetyMenuButton {
+        padding-left: 4px !important;
+    }
 }
 
 #cBHomeButton,
@@ -1038,7 +1046,7 @@ findbar {
         }
     }
 
-    margin-right: 14px !important;
+    margin-right: 10px !important;
 }
 
 #_a9c2ad37-e940-4892-8dce-cd73c6cbbc0c_-BAP {
